--- a/.github/workflows/update-blog.yml
+++ b/.github/workflows/update-blog.yml
@@ -13,4 +13,5 @@ jobs:
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
           comment_tag_name: "BLOG-LIST"
+          max_post_count: 5
           feed_list: "https://dancro.dev/rss/"
